--- a/src/app/home/customerbanner/customerbanner.component.scss
+++ b/src/app/home/customerbanner/customerbanner.component.scss
@@ -32,7 +32,7 @@
 }
 
 .bannerbg {
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(28, 0, 138, 0.5)), url(assets/images/banner/62b.png);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(28, 0, 138, 0.5)), url(../../../assets/images/banner/62b.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
