--- a/src/assets/styles/_background.scss
+++ b/src/assets/styles/_background.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .bg-light-grey {
-  background-color: #e5e5e5;
+  background-color: #ececec;
 }
 
 .bg-medium-grey {
@@ -44,4 +44,11 @@ body {
 
 .bg-twitter {
   background-color: #02a8f3;
+}
+
+.bg-imagered{
+  background-image: url("../images/background/1.jpg");
+}
+.bg-red{
+  background-color: #8e0000;
 }
