--- a/src/app/core/shell/shell.component.scss
+++ b/src/app/core/shell/shell.component.scss
@@ -1,4 +1,4 @@
-#mifosx-shell-container {
+#midas-shell-container {
   max-width: 100%;
   height: 100vh;
 
@@ -23,20 +23,23 @@
 
   .breadcrumbCss{
     position:relative;
-    top:64px;
+    top: 64px;
+    left: 1rem;
+    width: 100%;
   }
 
   .progressBarCss{
     position:fixed;
-    z-index: 9999;
-    top:64px;
+    z-index: 9000;
+    top:0px;
   }
 
   .toolBarCss{
     position: fixed;
-    top: 0px;
-    z-index: 9999;
+    top: 4px;
+    z-index: 9000;
     width:100%;
+    
   }
 
   // .toolBarCss-compact{
