--- a/src/app/core/shell/sidenav/sidenav.component.scss
+++ b/src/app/core/shell/sidenav/sidenav.component.scss
@@ -3,7 +3,7 @@
   .navigation-panel {
     width: 100%;
     height: 100%;
-    padding-top: 20%;
+    padding-top: 0px  !important;
     overflow-x: hidden;
   }
 
@@ -16,7 +16,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    max-width: 15rem;
+    width: 100%;
     z-index: 9999;
     &:hover {
       cursor: pointer;
@@ -114,7 +114,7 @@
 
     .nav-item-sep {
       padding: 0;
-      margin: 1rem 0;
+      margin: 0.5rem 0;
     }
 
     .mat-nav-list {
