--- a/src/app/core/shell/toolbar/toolbar.component.scss
+++ b/src/app/core/shell/toolbar/toolbar.component.scss
@@ -1,6 +1,8 @@
-#mifosx-toolbar {
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-
+#midas-toolbar {
+  //box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  // background: linear-gradient(-90deg, rgba(198, 40, 40, 1), rgba(198, 40, 40, 0.5));
+  background: transparent;
+    
 
   .tab-link {
     min-width: auto;
@@ -42,6 +44,32 @@
     position: fixed;
     bottom: 1%;
     right: 3%;
+  }
+
+  .app-brand {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 15rem;
+    z-index: 9999;
+    &:hover {
+      cursor: pointer;
+    }
+
+    .app-logo {
+      width: auto;
+      height: 42px;
+      margin-right: 8px;
+    }
+
+    .app-logo-text {
+      width: auto;
+      height: auto;
+      font-size: 1.5rem;
+      font-weight: normal;
+      color: black;
+    }
   }
 }
 
