--- a/src/app/shared/notifications-tray/notifications-tray.component.scss
+++ b/src/app/shared/notifications-tray/notifications-tray.component.scss
@@ -1,4 +1,4 @@
-.mifosx-notifications-menu {
+.midas-notifications-menu {
 
   max-height: 20rem !important;
   width: 12.5rem !important;
@@ -18,4 +18,7 @@
     }
   }
 
+}
+.notification-bell{
+ 
 }
