--- a/src/app/shared/theme-picker/theme-picker.component.html
+++ b/src/app/shared/theme-picker/theme-picker.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button [matMenuTriggerFor]="themeMenu" matTooltip="Color Schemes">
+<button mat-mini-fab [matMenuTriggerFor]="themeMenu" matTooltip="Color Schemes">
   <fa-icon icon="fill-drip" size="lg"></fa-icon>
 </button>
 
