--- a/src/app/transactions/dialog/valid-check-transaction-history/valid-check-transaction-history-dialog.component.html
+++ b/src/app/transactions/dialog/valid-check-transaction-history/valid-check-transaction-history-dialog.component.html
@@ -51,6 +51,6 @@
   </table>
 </mat-card-content>
 
-<mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
+<mat-dialog-actions align="center">
   <button mat-raised-button mat-dialog-close color="primary">Đóng</button>
 </mat-dialog-actions>
